k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: google-online-boutique
  labels:
    project: online-boutique
    owner: sri
